--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,8 @@
 [submodule "backend"]
 	path = backend
 	url = git@github.com:pehenobra2/backend.git
+	branch = main
 [submodule "frontend"]
 	path = frontend
 	url = git@github.com:pehenobra2/frontend.git
+	branch = main
